Vendor deps and add GET support for single todo
